--- a/index.html
+++ b/index.html
@@ -13,10 +13,10 @@
         <div class="float nav-left">
           <ul>
             <li><a href="#"><img class="logo"src="img/logo.png" alt="mio-logo"></a></li>
-            <li><a href="#">link</a></li>
-            <li><a href="#">link</a></li>
-            <li><a href="#">link</a></li>
-            <li><a href="#">link</a></li>
+            <li><a href="#">il metodo</a></li>
+            <li><a href="#">la tecnonolgia</a></li>
+            <li><a href="#">real-life english</a></li>
+            <li><a href="#">soluzioni aziendali</a></li>
           </ul>
         </div>
         <div class="float nav-right">
