--- a/index.html
+++ b/index.html
@@ -7,9 +7,12 @@
     <title>Fluentify</title>
   </head>
   <body>
+
     <!-- inizio header -->
     <header class="all-header">
       <nav class="nav-header">
+
+        <!-- nav-left -->
         <div class="float nav-left">
           <ul>
             <li><a href="#"><img class="logo"src="img/logo.png" alt="mio-logo"></a></li>
@@ -19,7 +22,15 @@
             <li><a href="#">soluzioni aziendali</a></li>
           </ul>
         </div>
+        <!-- fine nav-left -->
+
+        <!-- nav-right -->
         <div class="float nav-right">
+          <ul>
+            <li><a href="#">diventa tutor</a></li>
+            <li><a href="#" class="login">login</a></li>
+            <li><a href="#" class="struttura">struttura un piano</a></li>
+          </ul>
 
         </div>
 
