--- a/index.html
+++ b/index.html
@@ -10,8 +10,9 @@
 
     <!-- inizio header -->
     <header class="all-header">
-      <nav class="nav-header">
 
+      <!-- nav-header -->
+      <nav class="nav-header">
         <!-- nav-left -->
         <div class="float nav-left">
           <ul>
@@ -31,12 +32,20 @@
             <li><a href="#" class="login">login</a></li>
             <li><a href="#" class="struttura">struttura un piano</a></li>
           </ul>
-
         </div>
-
-
-
+        <!-- fine nav-right -->
       </nav>
+      <!-- fine nav-header -->
+
+      <!-- header center -->
+      <div class="header-center">
+        <div class="header-claim">
+          <h1>Scegli l'inglese studiato per i professionisti</h1>
+          <a class="struttura"href="#">struttura piano</a>
+        </div>
+      </div>
+      <!-- fine header center -->
+
     </header>
     <!-- fine header -->
 
